# VisTacFusion

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements.txt  train_dpt_colab_dinov3.ipynb
configs/: data.yaml  model.yaml  train.yaml
scripts/: ablation.sh  eval.sh  train.sh
tests/: conftest.py  test_overfit.py  test_real_encoder.py  test_routing.py  test_shapes.py
vistacfusion/data/: dataset.py  transforms.py
vistacfusion/engine/: eval.py  inference.py  metrics.py  train.py
vistacfusion/losses/: depth.py  normal.py  pose.py  total.py
vistacfusion/models/: encoders.py  fusion.py  model.py  projection.py
vistacfusion/models/heads/: dpt.py  pose.py
vistacfusion/utils/: config.py  misc.py
