[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "vistacfusion"
version = "0.1.0"
description = "Visuo-tactile multi-task model (depth + normal + SE(2) pose) with frozen DINOv3 encoders and a bottleneck fusion trunk."
readme = "README.md"
requires-python = ">=3.10"
dynamic = ["dependencies"]

[tool.setuptools.packages.find]
include = ["vistacfusion*"]

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
